update(project): code formatting

--- a/package.json
+++ b/package.json
@@ -1,117 +1,117 @@
 {
-	"name": "erkobridee.github.io",
-	"private": true,
-	"description": "my home page",
-	"version": "0.1.0",
-	"author": "Erko Bridee <erko.bridee@gmail.com>",
-	"dependencies": {
-		"classnames": "^2.2.6",
-		"css-vars-ponyfill": "^2.0.2",
-		"qs": "^6.7.0",
-		"react": "^16.8.6",
-		"react-dom": "^16.8.6",
-		"react-helmet": "^5.2.1",
-		"react-intl": "^2.9.0",
-		"react-redux": "^7.1.0",
-		"redux": "^4.0.1",
-		"redux-thunk": "^2.3.0",
-		"whatwg-fetch": "^3.0.0"
-	},
-	"devDependencies": {
-		"@babel/cli": "^7.5.5",
-		"@types/classnames": "^2.2.8",
-		"@types/node": "^12.0.8",
-		"@types/qs": "^6.5.3",
-		"@types/reach__router": "^1.2.4",
-		"@types/react": "^16.8.21",
-		"@types/react-dom": "^16.8.4",
-		"@types/react-helmet": "^5.0.8",
-		"@types/react-intl": "^2.3.18",
-		"@types/react-redux": "^7.1.0",
-		"@typescript-eslint/eslint-plugin": "^1.10.2",
-		"@typescript-eslint/parser": "^1.10.2",
-		"babel-plugin-react-intl": "^4.1.3",
-		"babel-preset-gatsby": "^0.2.8",
-		"eslint": "^5.16.0",
-		"eslint-config-prettier": "^5.0.0",
-		"eslint-plugin-prettier": "^3.1.0",
-		"fs-extra": "^8.1.0",
-		"gatsby": "^2.13.41",
-		"gatsby-image": "^2.2.7",
-		"gatsby-plugin-create-client-paths": "^2.1.5",
-		"gatsby-plugin-manifest": "^2.2.4",
-		"gatsby-plugin-offline": "^2.2.4",
-		"gatsby-plugin-react-helmet": "^3.1.2",
-		"gatsby-plugin-sass": "^2.1.3",
-		"gatsby-plugin-sharp": "^2.2.9",
-		"gatsby-plugin-typescript": "^2.1.2",
-		"gatsby-source-filesystem": "^2.1.6",
-		"gatsby-transformer-sharp": "^2.2.4",
-		"gh-pages": "^2.0.1",
-		"node-sass": "^4.12.0",
-		"npm-run-all": "^4.1.5",
-		"postcss-preset-env": "^6.6.0",
-		"prettier": "^1.18.2",
-		"react-intl-translations-manager": "^5.0.3",
-		"svgo": "1.2.2",
-		"typescript": "^3.5.2",
-		"webfonts-generator": "^0.4.0",
-		"yargs": "^13.2.4"
-	},
-	"resolutions": {
-		"browserslist": "4.6.2",
-		"caniuse-lite": "1.0.30000974"
-	},
-	"keywords": [
-		"gatsby",
-		"starter",
-		"typescript"
-	],
-	"license": "MIT",
-	"scripts": {
-		"fonticons:clean-scss": "node scripts/fs/rm src/assets/styles/generated/",
-		"fonticons:clean-generated": "node scripts/fs/rm .build/icons/",
-		"fonticons:clean-static": "node scripts/fs/rm static/generated/",
-		"fonticons:clean": "npm-run-all -p fonticons:clean-generated fonticons:clean-static fonticons:clean-scss",
-		"fonticons:compress-mkdir": "node scripts/fs/mkdir .build/icons/compressed",
-		"fonticons:compress-run": "svgo --enable=removeStyleElement --enable=removeScriptElement --enable=sortAttrs src/assets/icons/*.svg -o .build/icons/compressed > /dev/null",
-		"fonticons:compress": "npm-run-all -s fonticons:compress-mkdir fonticons:compress-run",
-		"fonticons:generate": "node scripts/font-generator static/generated/fonticons/ -f fonticons",
-		"fonticons:move-scss": "node scripts/fs/mv static/generated/fonticons/fonticons.scss src/assets/styles/generated/fonticons.scss",
-		"fonticons": "npm-run-all fonticons:clean fonticons:compress fonticons:generate fonticons:move-scss",
-		"translations:extract": "TRANSLATIONS=true babel src --extensions '.ts,.tsx' --out-file .build/i18nExtractedMessages/compiled.js",
-		"translations:runner": "node scripts/translation-runner.js",
-		"translations": "npm-run-all -s translations:extract translations:runner",
-		"generate": "npm-run-all -s fonticons translations",
-		"format": "prettier --write src/**/*.{js,jsx,ts,tsx}",
-		"lint": "eslint 'src/**/*.{ts,tsx}'",
-		"type-check": "tsc",
-		"gatsby-clean": "gatsby clean",
-		"gatsby-develop": "gatsby develop -H 0.0.0.0",
-		"prefix:gatsby-build": "gatsby build --prefix-paths",
-		"gatsby-build": "gatsby build",
-		"gatsby-serve": "gatsby serve -H 0.0.0.0",
-		"clean:build": "node scripts/fs/rm .build/",
-		"clean": "npm-run-all -p clean:build fonticons:clean gatsby-clean",
-		"check": "npm-run-all -s type-check lint",
-		"base": "npm-run-all -s check fonticons translations",
-		"develop": "npm-run-all -s base gatsby-develop",
-		"start": "npm run develop",
-		"build": "npm-run-all -s clean base gatsby-build",
-		"prefix:build": "npm-run-all -s clean base prefix:gatsby-build",
-		"serve": "npm-run-all -s build gatsby-serve",
-		"gh-deploy": "gh-pages -d public -b master",
-		"deploy": "npm-run-all -s build gh-deploy",
-		"prefix:deploy": "PREFIX_PATH=true npm-run-all -s prefix:build gh-deploy"
-	},
-	"browserslist": [
-		">1%",
-		"ie>=11",
-		"iOS >= 9",
-		"Android >= 4.4",
-		"not op_mini all"
-	],
-	"gatsby": {
-		"pathPrefix": "/"
-	}
+  "name": "erkobridee.github.io",
+  "private": true,
+  "description": "my home page",
+  "version": "0.1.0",
+  "author": "Erko Bridee <erko.bridee@gmail.com>",
+  "dependencies": {
+    "classnames": "^2.2.6",
+    "css-vars-ponyfill": "^2.0.2",
+    "qs": "^6.7.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
+    "react-intl": "^2.9.0",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "whatwg-fetch": "^3.0.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.5.5",
+    "@types/classnames": "^2.2.8",
+    "@types/node": "^12.0.8",
+    "@types/qs": "^6.5.3",
+    "@types/reach__router": "^1.2.4",
+    "@types/react": "^16.8.21",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-helmet": "^5.0.8",
+    "@types/react-intl": "^2.3.18",
+    "@types/react-redux": "^7.1.0",
+    "@typescript-eslint/eslint-plugin": "^1.10.2",
+    "@typescript-eslint/parser": "^1.10.2",
+    "babel-plugin-react-intl": "^4.1.3",
+    "babel-preset-gatsby": "^0.2.8",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^5.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "fs-extra": "^8.1.0",
+    "gatsby": "^2.13.41",
+    "gatsby-image": "^2.2.7",
+    "gatsby-plugin-create-client-paths": "^2.1.5",
+    "gatsby-plugin-manifest": "^2.2.4",
+    "gatsby-plugin-offline": "^2.2.4",
+    "gatsby-plugin-react-helmet": "^3.1.2",
+    "gatsby-plugin-sass": "^2.1.3",
+    "gatsby-plugin-sharp": "^2.2.9",
+    "gatsby-plugin-typescript": "^2.1.2",
+    "gatsby-source-filesystem": "^2.1.6",
+    "gatsby-transformer-sharp": "^2.2.4",
+    "gh-pages": "^2.0.1",
+    "node-sass": "^4.12.0",
+    "npm-run-all": "^4.1.5",
+    "postcss-preset-env": "^6.6.0",
+    "prettier": "^1.18.2",
+    "react-intl-translations-manager": "^5.0.3",
+    "svgo": "1.2.2",
+    "typescript": "^3.5.2",
+    "webfonts-generator": "^0.4.0",
+    "yargs": "^13.2.4"
+  },
+  "resolutions": {
+    "browserslist": "4.6.2",
+    "caniuse-lite": "1.0.30000974"
+  },
+  "keywords": [
+    "gatsby",
+    "starter",
+    "typescript"
+  ],
+  "license": "MIT",
+  "scripts": {
+    "fonticons:clean-scss": "node scripts/fs/rm src/assets/styles/generated/",
+    "fonticons:clean-generated": "node scripts/fs/rm .build/icons/",
+    "fonticons:clean-static": "node scripts/fs/rm static/generated/",
+    "fonticons:clean": "npm-run-all -p fonticons:clean-generated fonticons:clean-static fonticons:clean-scss",
+    "fonticons:compress-mkdir": "node scripts/fs/mkdir .build/icons/compressed",
+    "fonticons:compress-run": "svgo --enable=removeStyleElement --enable=removeScriptElement --enable=sortAttrs src/assets/icons/*.svg -o .build/icons/compressed > /dev/null",
+    "fonticons:compress": "npm-run-all -s fonticons:compress-mkdir fonticons:compress-run",
+    "fonticons:generate": "node scripts/font-generator static/generated/fonticons/ -f fonticons",
+    "fonticons:move-scss": "node scripts/fs/mv static/generated/fonticons/fonticons.scss src/assets/styles/generated/fonticons.scss",
+    "fonticons": "npm-run-all fonticons:clean fonticons:compress fonticons:generate fonticons:move-scss",
+    "translations:extract": "TRANSLATIONS=true babel src --extensions '.ts,.tsx' --out-file .build/i18nExtractedMessages/compiled.js",
+    "translations:runner": "node scripts/translation-runner.js",
+    "translations": "npm-run-all -s translations:extract translations:runner",
+    "generate": "npm-run-all -s fonticons translations",
+    "format": "prettier --write 'src/**/*.{ts,tsx}'",
+    "lint": "eslint 'src/**/*.{ts,tsx}'",
+    "type-check": "tsc",
+    "gatsby-clean": "gatsby clean",
+    "gatsby-develop": "gatsby develop -H 0.0.0.0",
+    "prefix:gatsby-build": "gatsby build --prefix-paths",
+    "gatsby-build": "gatsby build",
+    "gatsby-serve": "gatsby serve -H 0.0.0.0",
+    "clean:build": "node scripts/fs/rm .build/",
+    "clean": "npm-run-all -p clean:build fonticons:clean gatsby-clean",
+    "check": "npm-run-all -s type-check lint",
+    "base": "npm-run-all -s check fonticons translations",
+    "develop": "npm-run-all -s base gatsby-develop",
+    "start": "npm run develop",
+    "build": "npm-run-all -s clean base gatsby-build",
+    "prefix:build": "npm-run-all -s clean base prefix:gatsby-build",
+    "serve": "npm-run-all -s build gatsby-serve",
+    "gh-deploy": "gh-pages -d public -b master",
+    "deploy": "npm-run-all -s build gh-deploy",
+    "prefix:deploy": "PREFIX_PATH=false npm-run-all -s prefix:build gh-deploy"
+  },
+  "browserslist": [
+    ">1%",
+    "ie>=11",
+    "iOS >= 9",
+    "Android >= 4.4",
+    "not op_mini all"
+  ],
+  "gatsby": {
+    "pathPrefix": "/"
+  }
 }
