--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,7 @@
 	"semi": true,
 	"singleQuote": true,
 	"tabWidth": 2,
-	"useTabs": true,
+	"useTabs": false,
 	"trailingComma": "es5",
 	"printWidth": 120,
 	"jsxBracketSameLine": false
