--- a/.eslintrc
+++ b/.eslintrc
@@ -14,8 +14,18 @@
 		}
 	},
 	"rules": {
-		"max-len": ["error", { "code": 120, "ignoreUrls": true }],
-		"import/prefer-default-export": false,
-		"@typescript-eslint/explicit-function-return-type": false
+		"max-len": [
+			"error",
+			{
+				"code": 120,
+				"ignoreComments": false,
+				"ignoreTrailingComments": true,
+				"ignoreUrls": true,
+				"ignoreStrings": true,
+				"ignoreTemplateLiterals": true
+			}
+		],
+		"import/prefer-default-export": "off",
+		"@typescript-eslint/explicit-function-return-type": "off"
 	}
 }
