--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,10 @@
 {
-	"endOfLine": "lf",
-	"semi": true,
-	"singleQuote": true,
-	"tabWidth": 2,
-	"useTabs": false,
-	"trailingComma": "es5",
-	"printWidth": 120,
-	"jsxBracketSameLine": false
+  "endOfLine": "lf",
+  "semi": true,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "useTabs": true,
+  "trailingComma": "es5",
+  "printWidth": 120,
+  "jsxBracketSameLine": false
 }
