--- a/.editorconfig
+++ b/.editorconfig
@@ -5,10 +5,11 @@ root = true
 
 # Unix-style newlines with a newline ending every file
 [*]
+charset = utf-8
 end_of_line = lf
 insert_final_newline = true
 indent_style = tab
 indent_size = 2
 
-[*.yml]
+[*.{yml,md}]
 indent_style = space
