--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"gatsby": "^2.20.2",
 		"gatsby-image": "^2.3.0",
 		"gatsby-plugin-create-client-paths": "^2.2.0",
+		"gatsby-plugin-google-analytics": "^2.3.15",
 		"gatsby-plugin-manifest": "^2.3.1",
 		"gatsby-plugin-offline": "^3.1.0",
 		"gatsby-plugin-react-helmet": "^3.2.0",
