--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,18 @@ dist/
 # generated types
 .astro/
 
+# generated files by astro-favicons
+public/android-chrome-*
+public/apple-touch-icon.png
+public/browserconfig.xml
+public/favicon-*
+public/favicon.ico
+public/manifest.webmanifest
+public/mstile-150x150.png
+public/safari-pinned-tab.svg
+public/yandex-browser-50x50.png
+public/yandex-browser-manifest.json
+
 # dependencies
 node_modules/
 
