--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "0.7.0",
-    "canvas-confetti": "1.9.3",
-    "typescript": "5.5.2"
+    "canvas-confetti": "1.9.3"
   },
   "devDependencies": {
     "@astrojs/check": "0.7.0",
@@ -30,6 +28,7 @@
     "@typescript-eslint/parser": "7.14.1",
     "astro": "4.11.3",
     "astro-favicons": "2.0.2",
+    "astro-icon": "1.1.0",
     "autoprefixer": "10.4.19",
     "clsx": "2.1.1",
     "eslint": "8.57.0",
