--- a/.github/workflows/deploy_gh-pages.yml
+++ b/.github/workflows/deploy_gh-pages.yml
@@ -35,7 +35,7 @@ jobs:
           node-version: 22.x
 
       - name: Install
-        run: npm i --legacy-peer-deps
+        run: npm i
 
       - name: Build
         run: npm run build
