--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prettier": "prettier --write  \"**/*.{js,jsx,ts,tsx,md,mdx,astro}\"",
     "eslint": "eslint --fix \"src/**/*.{js,ts,jsx,tsx,astro}\"",
     "lint": "run-s prettier eslint",
+    "sync": "astro sync",
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro check && astro build",
@@ -22,7 +23,7 @@
   "devDependencies": {
     "@astrojs/check": "0.9.4",
     "@astrojs/mdx": "4.0.8",
-    "@astrojs/tailwind": "6.0.0",
+    "@tailwindcss/vite": "4.0.3",
     "@types/canvas-confetti": "1.9.0",
     "@typescript-eslint/eslint-plugin": "8.23.0",
     "@typescript-eslint/parser": "8.23.0",
@@ -43,7 +44,7 @@
     "prettier-plugin-tailwindcss": "0.6.11",
     "simple-git-hooks": "2.11.1",
     "tailwind-merge": "3.0.1",
-    "tailwindcss": "3.4.17",
+    "tailwindcss": "4.0.3",
     "typescript": "5.7.3"
   },
   "lint-staged": {
