update(project): dependencies

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@astrojs/check": "0.9.4",
     "@astrojs/mdx": "4.3.1",
+    "@astrojs/ts-plugin": "1.10.4",
     "@tailwindcss/vite": "4.1.11",
     "@types/canvas-confetti": "1.9.0",
     "@typescript-eslint/eslint-plugin": "8.38.0",
