--- a/.github/workflows/deploy_gh-pages.yml
+++ b/.github/workflows/deploy_gh-pages.yml
@@ -12,7 +12,8 @@ on:
   # Trigger the workflow every time you push to the `main` branch
   # Using a different branch name? Replace `main` with your branch’s name
   push:
-    branches: [source]
+    branches:
+      - source
   # Allows you to run this workflow manually from the Actions tab on GitHub.
   workflow_dispatch:
 
